hphp/hack/test/typecheck/xhp_hint.php
<?hh

class :foo {}

function f(): :foo {
  return 1;
}
